process concurrently with executor service